# RecipeWrangler-Backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  RECIPE_DATASETS.md  pyproject.toml  requirements.txt  test_foodchat.py  testing.ipynb
chromadb-docker/: Dockerfile  Makefile  README.md  docker-compose.yml
core/: lm_config.py  state.py
docs/: ESSRG_PLANEAT_T442_data_provenance.md  data-provenance.md  data-quality-and-pipeline-changes.md  graph-schema.md  recipe-wrangler-technical-report.md  weight_reference_rebuild.md
elasticsearch-docker/: docker-compose.yaml
graph/: DataToGraph.ipynb
neo4j-docker/: Dockerfile  Makefile  README.md  docker-compose.yml
notebooks/: recipe1m_preprocessing.ipynb  test_tools.ipynb
postgresql-docker/: docker-compose.yaml
preprocessing/: Data_Preprocessing_v2.ipynb  __init__.py
scripts/: README.md  analyze_nutritional_outliers.py  analyze_nutritional_outliers_v2.py  analyze_nutritional_outliers_v3.py  analyze_nutritional_outliers_v4.py  audit_nutrition_matches.py  backfill_sustainability.py  backfill_sustainability_v2.py  batch_profile_recipe1m.py  build_eu_global_dataset.py  build_eu_nutrient_mapping.py  build_nutrition_aliases.py  calculate_curated_fvln_percentages.py  calculate_reference_fvln_percentages.py  cleanup_non_food_ingredients.py  compute_myplate_reference_nutriscore.py  create_manifest_and_checksums.py  disable_recipes.py  export_co2e_per_serving.py  export_elasticsearch.py  export_sync_bundle.py  extract_myplate_duration.py  generate_normalized_parse_analysis.py  generate_phase1_reference_nutrient_plots.py  generate_reference_nutriscore_donuts.py  generate_safefood_images.py  import_irish_safefood.py  import_myplate_nutrition.py  import_planeat.py  import_safefood_web.py  import_slovenian.py  infer_essrg_serves_time_vllm.py  load_essrg_to_databases.py  merge_safefood_rcsi_lab.py  prepare_essrg.py  profile_essrg_recipes.py  profile_planeat_regions.py  profile_slovenian_regions.py  recompute_all_profiles.py  recompute_eu_from_existing.py  (+17 more)
tests/: conftest.py  test_allergen_detection.py  test_cleanup_non_food.py  test_es_recipe_projection.py  test_gluten_free_option_tagging.py  test_ingredient_line_splitter.py  test_nutrition_match.py  (+6 more)
(+187 files in other folders)
